# DriverScope

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
driverscope/: __init__.py  __main__.py  aipan.py  bazaar.py  browser_harvest.py  bulk_scrape.py  cli.py  cn_forums.py  corpus.py  db.py  diff.py  emulate.py  find_novel.py  fuzz_gen.py  harvester.py  html_dossier.py  hunter.py  hvci.py  ioctl.py  kdu.py  pdb_resolver.py  pipeline.py  regional.py  scanner.py  tlsh_cluster.py  triage.py  vxug.py  wayback.py  wdm_filter.py  winget_walk.py
driverscope/harvester/: __init__.py  bmc.py  cn.py  oem.py  rgb.py  storage.py  sysinfo.py  vpn.py
examples/: basic_scan.py  comm_template.h  gen_comm_header.py  ioctl_tester.c  ioctl_tester.cpp  poc_ksld.cpp  poc_rtcore64.cpp  poc_winnotify.cpp
examples/wrappers/: KslD.h  WinNotify.h
tests/: test_scanner.py
