[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driverscope"
version = "0.1.0"
description = "Automated BYOVD hunting pipeline — scan, triage, and discover vulnerable signed Windows kernel drivers before they appear in public databases."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "MrNiceGuy" }]
keywords = ["byovd", "driver", "vulnerability", "kernel", "windows", "security-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Operating System Kernels",
]

dependencies = [
    "pefile>=2023.2.7",
]

[project.optional-dependencies]
disasm = ["capstone>=5.0"]
vt = []  # VT uses stdlib urllib — key via env var VT_API_KEY
dev = ["pytest>=7.0", "capstone>=5.0"]

[project.scripts]
driverscope = "driverscope.cli:main"

[project.urls]
Homepage = "https://github.com/MrNiceGuy/DriverScope"
Issues = "https://github.com/MrNiceGuy/DriverScope/issues"

[tool.setuptools.packages.find]
include = ["driverscope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
