[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driverscope"
version = "0.1.0"
description = "Automated BYOVD hunting pipeline for Windows kernel drivers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "diabloidyobane" }]
keywords = ["byovd", "driver", "vulnerability", "kernel", "windows", "security-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Operating System Kernels",
]

dependencies = [
    "pefile>=2023.2.7",
]

[project.optional-dependencies]
disasm = ["capstone>=5.0"]
emulate = ["speakeasy-emulator>=1.5"]
bulk = ["playwright>=1.40", "httpx>=0.25"]
triage = ["anthropic>=0.34"]
cluster = ["python-tlsh>=4.5"]
all = [
    "capstone>=5.0",
    "speakeasy-emulator>=1.5",
    "playwright>=1.40",
    "httpx>=0.25",
    "anthropic>=0.34",
    "python-tlsh>=4.5",
]
dev = ["pytest>=7.0", "capstone>=5.0"]

[project.scripts]
driverscope = "driverscope.cli:main"

[project.urls]
Homepage = "https://github.com/diabloidyobane/DriverScope"
Issues = "https://github.com/diabloidyobane/DriverScope/issues"

[tool.setuptools.packages.find]
include = ["driverscope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
